--- a/martian/public/css/style.css
+++ b/martian/public/css/style.css
@@ -14,7 +14,7 @@ html {
   scroll-behavior: smooth;
   font-weight: 400;
   font-size: 30px;
-  font-family: "Lato", sans-serif;
+  font-family: "Song Myung", serif;
   text-rendering: optimizeLegibility;
 }
 
@@ -47,4 +47,63 @@ body {
   height: 25rem;
   border: 4px solid #555;
   margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+}
+
+/*-------------------------------*/
+/*CONVERTER SECTION*/
+/*-------------------------------*/
+
+.converter {
+  height: 70%;
+  display: flex;
+}
+
+.converter_container {
+  height: 100%;
+  width: 70%;
+  display: inline-block;
+}
+
+.earth_container {
+  height: 100%;
+  width: 30%;
+  display: inline-block;
+  display: flex;
+  align-items: flex-end;
+  flex-direction: column;
+}
+
+.globe-image {
+  margin: 2rem 2rem 0 0;
+  height: 5rem;
+  width: 5rem;
+}
+
+/*-------------------------------*/
+/*CONTROL SECTION*/
+/*-------------------------------*/
+
+.control {
+  height: 30%;
+}
+
+.control_container {
+  width: 100%;
+  height: 100%;
+}
+
+.control_container > li {
+  width: 43%;
+  height: 100%;
+  border: 3px solid skyblue;
+  display: inline-block;
+  text-align: left;
+}
+
+.control_container > li > h3 {
+  color: #555;
+  font-size: 1rem;
+  font-weight: 600;
 }
