Feat: finish buttons in UI & add hovering effect

--- a/martian/public/css/style.css
+++ b/martian/public/css/style.css
@@ -97,7 +97,6 @@ body {
 .control_container > li {
   width: 43%;
   height: 100%;
-  border: 3px solid skyblue;
   display: inline-block;
   text-align: left;
 }
@@ -106,4 +105,66 @@ body {
   color: #555;
   font-size: 1rem;
   font-weight: 600;
+}
+
+.hexadecimal_result {
+  margin: 0.5rem 0;
+  width: 10rem;
+  height: 1.5rem;
+  border: 2px solid #555;
+  border-radius: 5px;
+}
+
+.language_input {
+  font-size: 0.7rem;
+  margin: 0.5rem 0;
+  display: block;
+  width: 10rem;
+  height: 1.5rem;
+  border: 2px solid #555;
+  border-radius: 5px;
+}
+
+.hexadecimal_translate {
+  margin-top: 0.3rem;
+  width: 5rem;
+  height: 1.5rem;
+  font-weight: 600;
+  font-size: 0.7rem;
+  border: none;
+  background-color: #038ef8;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.hexadecimal_translate:hover {
+  background-color: #1b9afcc6;
+  transition: background-color 0.2s;
+}
+
+.hexadecimal_translate:not(:hover) {
+  transition: background-color 0.2s;
+}
+
+.languag_send {
+  margin-top: 0.3rem;
+  width: 5rem;
+  height: 1.5rem;
+  font-weight: 600;
+  font-size: 0.7rem;
+  border: none;
+  background-color: #ff7f50;
+  border-radius: 5px;
+  color: #fff;
+  cursor: pointer;
+}
+
+.languag_send:hover {
+  background-color: #ff7f50c5;
+  transition: background-color 0.2s;
+}
+
+.languag_send:not(:hover) {
+  transition: background-color 0.2s;
 }
