Feat: make converToHexadecimal func

--- a/martian/views/index.ejs
+++ b/martian/views/index.ejs
@@ -85,5 +85,6 @@
       </div>
     </div>
     <script type="module" src="/js/index.js"></script>
+    <script type="module" src="/js/translator.js"></script>
   </body>
 </html>
