--- a/martian/public/css/style.css
+++ b/martian/public/css/style.css
@@ -87,13 +87,15 @@ svg {
   width: 5rem;
 }
 
-.glow {
-  animation: blinker 1s linear infinite;
+.blink {
+  color: #ffc048;
+  fill: currentColor;
+  animation: blinker 0.5s linear infinite;
 }
 
 @keyframes blinker {
   50% {
-    opacity: 0;
+    opacity: 30%;
   }
 }
 
