--- a/martian/views/index.ejs
+++ b/martian/views/index.ejs
@@ -84,7 +84,7 @@
       </section>
       </div>
     </div>
-    <script type="module" src="/js/index.js"></script>
+    <script type="module" src="/js/app.js"></script>
     <script type="module" src="/js/translator.js"></script>
   </body>
 </html>
