--- a/martian/public/css/style.css
+++ b/martian/public/css/style.css
@@ -134,6 +134,9 @@ svg {
 }
 
 .hexadecimal_result {
+  padding-left: 0.2rem;
+  color: #1e90ff;
+  font-size: 1rem;
   margin: 0.5rem 0;
   width: 10rem;
   height: 1.5rem;
@@ -142,7 +145,8 @@ svg {
 }
 
 .language_input {
-  font-size: 0.7rem;
+  padding: 0.2rem;
+  font-size: 1rem;
   margin: 0.5rem 0;
   display: block;
   width: 10rem;
