Feat: calculate degree for arrow to move
- Add checkFirst func to count number of times func executed.
- Add getPrevArc func to decide direction of rotation.
- Add calculateDegree func to get ought-to-move degree.

--- a/martian/views/index.ejs
+++ b/martian/views/index.ejs
@@ -73,7 +73,7 @@
           <li class="control_hexadecimal">
             <h3>송수신정보</h3>
             <div class="hexadecimal_result"></div>
-            <button class="hexadecimal_translate">해석하기</button>
+            <button class="hexadecimal_translate first">해석하기</button>
           </li>
           <li class="control_language">
             <h3>발신정보입력</h3>
