Feat: add 500ms transition effect on arrow

--- a/martian/public/css/style.css
+++ b/martian/public/css/style.css
@@ -105,6 +105,7 @@ svg {
   position: absolute;
   top: 240px;
   right: 450px;
+  transition: transform 500ms;
 }
 
 /*-------------------------------*/
